--- a/app/views/manage/questionnaire-enf/v1/task-list__notified.html
+++ b/app/views/manage/questionnaire-enf/v1/task-list__notified.html
@@ -22,7 +22,7 @@
     rows: [
     {
       key: {
-        html: 'Upload the appeal notification letter and the list of people that you notified'
+        html: 'Appeal notification letter and list of people notified'
       },
       value: {
         html: '<a href="#">'+(data['appeal-notification-upload'] or 'Notification_letter.pdf')+'</a>'
@@ -47,7 +47,7 @@
     },
       {
         key: {
-          html: 'Upload the list of people that you served the enforcement notice to'
+          html: 'List of people served with enforcement notice'
         },
         value: {
           html: '<a href="#">'+(data['notified-who'] or 'Notified list.pdf')+'</a>'
