--- a/app/views/manage/questionnaire-enf/v1/task-list__site-access.html
+++ b/app/views/manage/questionnaire-enf/v1/task-list__site-access.html
@@ -22,7 +22,7 @@
     rows: [
       {
         key: {
-          html: 'Will the inspector need to enter a neighbour’s land or property?'
+          html: 'Access for inspection'
         },
         value: {
           html: 'Yes<br>'+data['site-entry__details'] if data['site-entry'] == 'Yes' else 'No'
@@ -47,7 +47,7 @@
       },
       {
         key: {
-          html: 'Might the inspector need to enter a neighbour’s land or property?'
+          html: 'Inspector visit to neighbour'
         },
         value: {
           html: 'Yes<br>'+data['neighbours-land__details'] if data['neighbours-land'] == 'Yes' else 'No'
